deleted console.log and tried another way of fix dark mode on mobiles (dark mode is glitching when keyboard is open on phone )

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  /* background-color: rgb(39, 39, 42); */
-}
+/* body {
+  background-color: rgb(39, 39, 42);
+} */
 
 #root {
   min-height: 100vh;
